# Cometa

./: CMakeLists.txt  main.cpp  resources.qrc
data/Class/: NavigationData.h  aianalyzer.cpp  aianalyzer.h  ethernetclient.cpp  ethernetclient.h  formatnavigationdata.cpp  formatnavigationdata.h  logger.cpp  logger.h  navigationdata.cpp  parsernmea.cpp  parsernmea.h  udpsocket.cpp  udpsocket.h
data/Managers/: connectionmanager.cpp  connectionmanager.h  databasemanager.cpp  databasemanager.h  datamanager.cpp  datamanager.h
data/Resources/: Cometa_en_EN.ts
tests/: testdatabasemanager.cpp  testdatabasemanager.h  testparser.cpp  testparser.h
ui/DataDisplay/: datadisplaywindow.cpp  datadisplaywindow.h  mapwidget.cpp  mapwidget.h  reporttab.cpp  reporttab.h  reporttab.ui  setupchartstab.cpp  setupchartstab.h  setupgraphtab.cpp  setupgraphtab.h  setuptabletab.cpp  setuptabletab.h  tableconfigdialog.cpp  tableconfigdialog.h
ui/DataDisplay/Map/: MapView.qml  ReportMap.qml
ui/DataDisplay/Map/forms/: LoadFlightDialog.qml
ui/DataDisplay/Map/map/: MapComponent.qml
ui/DataDisplay/Map/resources/: MapPolyline.qml  Marker.qml  MyPolyline.qml
ui/MainWindow/: mainwindow.cpp  mainwindow.h
ui/Settings/: settings.cpp  settings.h
